--- a/editor/unproc.html
+++ b/editor/unproc.html
@@ -53,6 +53,7 @@ transform: translate(-50%,-50%);
 }
 h3.dir,div.placedescr{cursor: pointer;}
 .fixed-top-right{position:absolute;top:0.5rem;right:0.5rem;}
+.thumbnail select.pplid{max-width: 400px;}
 </style>
 <script src="js/jquery.js"></script>
 <script src="bootstrap/js/bootstrap.js"></script>
