--- a/editor/index.html
+++ b/editor/index.html
@@ -21,8 +21,10 @@ body{padding-top: 70px;}
 	</div>
 	<div class="navbar-collapse collapse">
 		<div id="nav-msg" style="display: inline-block;"></div>
-		<button type="button" class="btn btn-default navbar-btn" onclick="return prepPhotos();">Prepare photos</button>		
-		<button type="button" class="btn btn-default navbar-btn" onclick="return auditPhotos();">Photo/DB audit</button>
+		<button type="button" class="btn btn-default navbar-btn" onclick="return prepPhotos();" title="ReSize-Read Dirs for files that don't have all smaller sizes">Prepare photos</button>		
+		<!-- <button type="button" class="btn btn-default navbar-btn" onclick="return auditPhotos();">Photo/DB audit</button>  -->
+		<a href="edit_place.html" class="btn btn-default navbar-btn">Edit locations</a>
+		<a href="unproc.html" class="btn btn-default navbar-btn" title="Process new photos">New photos</a>
 	</div>
 </div>
 </nav>
