--- a/editor/index.html
+++ b/editor/index.html
@@ -25,6 +25,7 @@ body{padding-top: 70px;}
 		<!-- <button type="button" class="btn btn-default navbar-btn" onclick="return auditPhotos();">Photo/DB audit</button>  -->
 		<a href="edit_place.html" class="btn btn-default navbar-btn">Edit locations</a>
 		<a href="unproc.html" class="btn btn-default navbar-btn" title="Process new photos">New photos</a>
+		<button type="button" class="btn btn-default navbar-btn" onclick="return refreshAfterAdd();">Rebuild</button>
 	</div>
 </div>
 </nav>
