--- a/editor/unproc.html
+++ b/editor/unproc.html
@@ -295,7 +295,7 @@ h3.dir,div.placedescr{cursor: pointer;}
 			<div class="img spinner"></div>
 			<div class="caption">
 				<form class="file-data">
-					<h3></h3>
+					<h3 class="fn"></h3>
 					<input type="hidden" name='id' value="0">
 					<input type="hidden" name='thumb' value="0">
 					<div class="exif">
