delete button move

--- a/editor/unproc.html
+++ b/editor/unproc.html
@@ -294,7 +294,7 @@ h3.dir,div.placedescr{cursor: pointer;}
 	<!-- for files -->
 	<div class="file-template my-template">
 		<div class="thumbnail photo">
-			<button class="btn btn-default fixed-bottom-right" onclick="return deletePhoto(this);"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></button>
+			<button class="btn btn-default fixed-top-right" onclick="return deletePhoto(this);"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></button>
 			<div class="img spinner"></div>
 			<div class="caption">
 				<form class="file-data">
