--- a/editor/unproc.html
+++ b/editor/unproc.html
@@ -56,6 +56,7 @@ h3.dir,div.placedescr{cursor: pointer;}
 .fixed-bottom-right{position:absolute;bottom:0.5rem;right:0.5rem;}
 .thumbnail{position:relative;}
 .thumbnail select.pplid{max-width: 400px;}
+.thumbnail .placedescr{max-width: 370px;}
 .spinner {
     border: 16px solid #f3f3f3; /* Light grey */
     border-top: 16px solid #3498db; /* Blue */
