unproc: message change

--- a/editor/unproc.html
+++ b/editor/unproc.html
@@ -89,8 +89,6 @@ h3.dir,div.placedescr{cursor: pointer;}
 			</div>
 			
 			<div class="navbar-collapse collapse">
-				<div id="msg" style="display: inline-block;"></div>
-			
 				<ul class="nav navbar-nav navbar-right">
 					<li class="active">
 						<button type="button" class="btn btn-default navbar-btn"
@@ -101,7 +99,9 @@ h3.dir,div.placedescr{cursor: pointer;}
 	</nav>
 	<div class="container" style='width: 90%;'>
 		
-	<div id="root"></div>
+	<div id="root">
+		<div id="msg"></div>			
+	</div>
 	
 	<!-- popup for event/place/people -->
 	<div id="elp" class="modal">
