--- a/editor/unproc.html
+++ b/editor/unproc.html
@@ -106,7 +106,33 @@ h3.dir,div.placedescr{cursor: pointer;}
 	<div id="root">
 		<div id="msg"></div>			
 	</div>
-	
+	<!-- popup for comments -->
+	<div id="cmt-edit" class="modal">
+		<div class="modal-dialog modal-lg">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+					<h4 class=modal-title>Comments</h4>
+				</div>
+				<div class="modal-body">
+					<form>
+						<div class="form-group">
+    						<label for="cmt-data-ru"></label>
+    						<textarea class="form-control" id="cmt-data-ru" rows="3"></textarea>
+  						</div>					
+						<div class="form-group">
+    						<label for="cmt-data-en"></label>
+    						<textarea class="form-control" id="cmt-data-en" rows="3"></textarea>
+  						</div>					
+					</form>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-success" onclick="updateComment()">Update</button>
+					<button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
+				</div>
+			</div>
+		</div>
+	</div>
 	<!-- popup for event/place/people -->
 	<div id="elp" class="modal">
 		<div class="modal-dialog modal-lg">
@@ -318,25 +344,12 @@ h3.dir,div.placedescr{cursor: pointer;}
 						<div class="well well-sm placedescr" onclick="openModal(this,false)"></div>
 					</div>
 					<div class="people form-group">
-						<label>People:</label> <select class="form-control pplid"
-							multiple="multiple"></select>
+						<label>People:</label> <select class="form-control pplid" multiple="multiple"></select>
 					</div>
 					<div class='my-cmt-btn'>
-						<span class="glyphicon glyphicon-plus-sign" style="cursor:pointer;" onclick="showComments(this); return false;"></span>
-					</div>
-					<div class="comment" style="display: none;">
-					<div class="form-group">
-						<div class="input-group">
-							<div class="input-group-addon">RU</div>
-							<input type="text" class="form-control" name="cr">
-						</div>
-					</div>
-					<div class="form-group">
-						<div class="input-group">
-							<div class="input-group-addon">EN</div>
-							<input type="text" class="form-control" name="ce">
-						</div>
-					</div>
+						<span class="glyphicon glyphicon-plus-sign" style="cursor:pointer;" onclick="showComments(this)"></span>			
+						<input type="hidden" name="cr">
+						<input type="hidden" name="ce">
 					</div>
 				</form>
 			</div>
