--- a/editor/unproc.html
+++ b/editor/unproc.html
@@ -153,9 +153,9 @@ h3.dir,div.placedescr{cursor: pointer;}
 						<button class="btn btn-success" onclick="editEvent()">New</button>
 					</div>
 					<div class="form-group placesel">
-						<label for="placesel" class="control-label">Place</label> <select
-							id='placesel' class="form-control select2-single"
-							style="width: 100%;"></select>
+						<label for="placesel" class="control-label">Place</label>
+						<select id='placesel' class="form-control select2-single" style="width: 100%;"></select>
+						<button class="btn btn-success" onclick="defaultLoc()">Default</button>
 					</div>
 					<div class="form-group peoplesel">
 						<label for="peoplesel" class="control-label">People</label> <select
