--- a/editor/audit.html
+++ b/editor/audit.html
@@ -26,5 +26,32 @@
 	<tbody id="nof"></tbody>
 </table>
 <h1>DB record should be hidden, but file still exists for it</h1><div id="hf"></div>
+<div class="modal" id="photoDetails" tabindex="-1" role="dialog" aria-labelledby="detLbl" style="width:100%;">
+	<div class="modal-dialog" role="document" style="width:100%;height:100%;">
+		<div class="modal-content">
+			<div class="modal-body">
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close" style="position:absolute; top:5px; right: 5px; font-size: 3em;color: white;"><span class="glyphicon glyphicon-remove-circle"></span></button>
+				<div class="content-center">
+    				<div id="largePhoto">
+    					<a class="carousel-control left" role="button"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span></a>
+    					<a class='img'><img src=""></a>
+    					<a class="carousel-control right" role="button"><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span></a>
+    				</div>
+    				<div id="details" style="min-width: 30%;margin-top: 10px;">
+    					<input id="photoid" type="hidden">
+        				<dl class="dl-horizontal">
+        					<dt class="evt">Event:</dt><dd class="evt"></dd>
+        					<dt class="loc">Place:</dt><dd class="loc"></dd>
+        					<dt class="ppl">People:</dt><dd class="ppl"></dd>
+        					<dt class="cmt">Comment:</dt><dd class="cmt"></dd>
+        					<dt class="ton">Taken on:</dt><dd class="ton"></dd>									
+        				</dl>
+	    				<div id="picfull" style="position:absolute;right:5px;bottom:5px;"></div>
+    				</div>
+				</div>		
+			</div>	
+		</div>
+	</div>
+</div>
 </body>
 </html>
