--- a/editor/unproc.html
+++ b/editor/unproc.html
@@ -118,11 +118,11 @@ h3.dir,div.placedescr{cursor: pointer;}
 					<form>
 						<div class="form-group">
     						<label for="cmt-data-ru"></label>
-    						<textarea class="form-control" id="cmt-data-ru" rows="3"></textarea>
+    						<textarea class="form-control" id="cmt-data-ru" rows="3" title="Комментарий на русском" placeholder="Комментарий на русском"></textarea>
   						</div>					
 						<div class="form-group">
     						<label for="cmt-data-en"></label>
-    						<textarea class="form-control" id="cmt-data-en" rows="3"></textarea>
+    						<textarea class="form-control" id="cmt-data-en" rows="3" title="Comments" placeholder="Comments"></textarea>
   						</div>					
 					</form>
 				</div>
